ignore non-empty-string errors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,2 +1,5 @@
 parameters:
-    ignoreErrors: []
+    ignoreErrors:
+        -
+            message: '#expects non-empty-string, string given#'
+            path: %currentWorkingDirectory%/**/*.php
