--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,6 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  # php80-min:
-  #   name: PHP 8.0 (--prefer-lowest)
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - name: checkout
-  #       uses: actions/checkout@v2
-  #     - name: composer test
-  #       uses: docker://chubbyphp/ci-php80:latest
-  #       env:
-  #         COMPOSER_ARGS: "--prefer-lowest"
-  #         COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
   php80:
     name: PHP 8.0
     runs-on: ubuntu-20.04
@@ -27,6 +15,17 @@ jobs:
         uses: actions/checkout@v2
       - name: composer test
         uses: docker://chubbyphp/ci-php80:latest
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
+  php81:
+    name: PHP 8.1
+    runs-on: ubuntu-20.04
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: composer test
+        uses: docker://chubbyphp/ci-php81:latest
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
